@startuml ERDiagram

entity User {
*id : Long (PK)
  --
nickName : vchar
password : vchar
introduction : vchar
reliability: float
profileImg: UUID(VCHAR)(FK) 

}

entity Visitor_VisitedSpot {
  *id : Long (PK)
  --
  visitorId : Long (FK) (User_ID)
  visitedSpotId : Long (FK) (Spot_ID)
}

entity Spot {
  *id : Long (PK)
  --
  spotName : vchar;
  spotIntroduction : text
  registrantId : number (FK)
  visited: number
  visiterStarPoint : float 
  userStarPoint: float
  mainSpotImgId : UUID(vchar)(FK) 
}


entity UploadFileInfo {
*id : (VCHAR)UUDI (PK)
 --
  uploadFileName : vchar
  storeFileName : vchar
}

entity added_spot_img {
 *id : Long (PK)
 --
 spotId : Long (FK)
  uploadFileInfoId : VCHAR(UUID)(FK)
}

entity Comment {
*id : Long (PK)
--
commentUserId : Long (FK)
startPoint: float
comment: text
commentedSpotId : Long (FK)
}

entity UserAcquaintance {
  *id : Long (PK)
  --
  UserId: Long (FK)
  Acquaintance: Long (FK)
}

entity RelationshipMessage{
  *id : Lonf (PK)
  --
  from_user_id : Long (PK)
  to_user_id : Long (PK)
  acceptance : boolean 
}


User ||--|{ Visitor_VisitedSpot
note on link : visitedSpots & visitors

User ||--o{ Spot
note on link : registeredSpots & registrant

Visitor_VisitedSpot }|--|| Spot
note on link : visitedSpots & visitors

User ||--|| UploadFileInfo
note on link : profileImg

Spot ||--|| UploadFileInfo
note on link : mainSpotImg

Spot ||--o{ added_spot_img

UploadFileInfo ||--|| added_spot_img

User ||--o{ Comment

Spot ||--o{ Comment

User ||--o{ UserAcquaintance
User ||--o{ UserAcquaintance

User ||--|| RelationshipMessage
User ||--|| RelationshipMessage

@enduml